<resources>
    <string name="app_name">iwamotokaito2</string>
    <string name="button_0">0</string>
    <string name="button_1">1</string>
    <string name="button_2">2</string>
    <string name="button_3">3</string>
    <string name="button_4">4</string>
    <string name="button_5">5</string>
    <string name="button_6">6</string>
    <string name="button_7">7</string>
    <string name="button_8">8</string>
    <string name="button_9">9</string>
    <string name="button_plus">+</string>
    <string name="button_mainas">-</string>
    <string name="button_equal">=</string>
    <string name="button_reset">C</string>
    <string name="button_multi">×</string>
    <string name="button_waru">÷</string>
    <string name="result_defalt_0">0</string>
    <string name="button_connma">.</string>
    <string name="buttonnull"> </string>
    <string name="buttonchange">切替</string>
    <string name="calculate_type">順次計算タイプ</string>
    <string name="caluculate_type2">掛け算・割り算を優先して計算する</string>
</resources>
